--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -9,3 +9,6 @@ R2.3.10
 R2.3.11
 	Changed Ud, Ld to counters rather than flags, they count the number of violations,
 	counters are cleared when se=0 is called. Changes made to  ims_bootup_V3.mcode.klg and ims_bootup_V3.mcode
+	
+R2.3.16
+    Addition of softmotor_interlock.template. A template for conditional soft limits. 
