renamed archive and autosave templates from .template to .tpl-arch, .tpl-req
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@15215 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -12,3 +12,4 @@ R2.3.11
 	
 R2.3.16
     Addition of softmotor_interlock.template. A template for conditional soft limits. 
+    Renamed autosave and archive file with .template to .tpl-req or .tpl-arch to match changes Bruce
